--- a/components/ThreesGrid.module.css
+++ b/components/ThreesGrid.module.css
@@ -11,9 +11,8 @@
     padding: 5px;
   }
 
-  .grid.loose {
-    gap: 80px;
-    padding: 5px;
+  .loose {
+    gap: 100px;
   }
 }
 
